# llm-council-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
llm_council_mcp/: __init__.py  config.py  council.py  openrouter.py  report.py  server.py
tests/: test_mcp_boot.py  test_pipeline_mock.py
